--- a/index.ipynb
+++ b/index.ipynb
@@ -405,21 +405,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-19-1958adad34c2>, line 2)",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<ipython-input-20-a01ce5a11f2e>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-1958adad34c2>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if (leng(restaurant[\"price\"])<len(alternative[\"price\"]):\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-a01ce5a11f2e>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
     "def is_cheaper(restaurant, alternative):\n",
-    "     if (leng(restaurant[\"price\"])<len(alternative[\"price\"]):\n",
+    "     if (leng(restaurant[\"price\"])<len(alternative[\"price\"])):\n",
     "        return True\n",
     "    else:\n",
     "        return False"
